# ZoteroTools

./: .gitignore  README.md  duplicateFinderExample.py  extractMedrXivExample.py  pyproject.toml
tests/: test_medrxiv.py
zoterotools/: __init__.py  findZoteroDuplicates.py  medrxiv.py
